--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "nodemon": "*",
-    "apollo-client": "^0.8.1",
+    "apollo-boost": "^0.4.9",
     "axios": "^0.15.3",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
@@ -24,18 +23,20 @@
     "connect-mongo": "^1.3.2",
     "css-loader": "^0.26.1",
     "express": "^4.14.0",
-    "express-graphql": "^0.6.1",
+    "express-graphql": "^0.11.0",
     "express-session": "^1.15.0",
-    "graphql": "^0.8.2",
+    "graphql": "^15.3.0",
+    "graphql-tag": "^2.11.0",
     "html-webpack-plugin": "^2.26.0",
     "lodash": "^4.17.4",
-    "mongoose": "^4.7.8",
+    "mongoose": "^5.10.9",
+    "nodemon": "*",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "react": "15.4.2",
-    "react-apollo": "^0.9.0",
-    "react-dom": "15.4.2",
-    "react-router": "^3.0.2",
+    "react": "^16.13.1",
+    "react-apollo": "^3.1.5",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.0",
     "webpack-dev-middleware": "^1.9.0"
